browser/css/jsdialogs.css
/* JSDialog */
.jsdialog-overlay {
	-webkit-animation: vex-fadein .5s;
	animation: vex-fadein .5s;
	position: absolute;
	background: transparent;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	max-width: 100%;
	max-height: 100%;
	z-index: 2000;
	display: flex;
	overflow: hidden;
}

.jsdialog-overlay.cancellable {
	-webkit-animation: none;
	animation: none;
}

.jsdialog-overlay.dimmed {
	background: #1c5fa814;
}

.lokdialog_container.ui-dialog.ui-widget-content.modalpopup,
.jsdialog-window.modalpopup {
	z-index: 2001;
}

.jsdialog-window {
	position: absolute;
	z-index: 1105;
}

.jsdialog-container {
	position: absolute;
}

.jsdialog-window:not(.modalpopup) .jsdialog-container:not(.snackbar) {
	min-width: 400px;
}

.jsdialog-container:not(.snackbar) td[role='gridcell'] {
	padding-left: 5px;
	padding-right: 5px;
}

#AcceptRejectChangesDialog {
	width: max-content;
	max-width: 1000px;
}
.jsdialog.one-child-popup {
	border: 0;
	margin: 0 !important;
}

.jsdialog-window.modalpopup:not(.snackbar) {
	min-width: 198px;
	max-width: 498px;
	border: 1px solid var(--color-border-darker) !important;
	border-radius: var(--border-radius);
	box-shadow: 0 0 3px var(--color-border-darker);
	overflow: auto;
	position: relative;
	margin: auto;
	max-height: calc(100% - 30px);
}

/* Overwrite .jsdialog-window.modalpopup width */
#modal-dialog-about-dialog-box {
	max-width: 94%;
	width: 754px;
}

.jsdialog-window.modalpopup .jsdialog-container {
	position: relative;
}

.jsdialog-container .ui-dialog-titlebar {
	background-color: var(--color-background-lighter);
}

.jsdialog-container .ui-dialog-content {
	max-height: calc( 90vh - 34px);
	overflow-y: auto !important;
	background-color: var(--color-background-lighter) !important;
	font-family: var(--jquery-ui-font);
	line-height: 1.5;
}

#SortKeyWindow {
	/* As used in .jsdialog-container .ui-dialog-content 90 % of the viewport
	   minus 352px:
		- 34px the dialog's header
		- 112px the next sibling
		- 50px the dialog's buttons
		- 80px status bar and calc sheet bar
		- 38px formulabar
		- 38px document-header
   */
	max-height: calc( 90vh - 352px);
}

.jsdialog-container .ui-dialog-content > div:not(.ui-scrollwindow) {
	overflow: hidden; /* don't inherit scrollbar from parent */
}

.jsdialog-container .lokdialog.ui-dialog-content.ui-widget-content {
	overflow: hidden;
}

.jsdialog.vertical label, .ui-frame-label {
	margin: auto 0px;
	color: var(--color-main-text);
	font-size: var(--default-font-size);
	line-height: var(--default-height);
	padding-left: inherit;
}
#glowframe > div.ui-frame.jsdialog.sidebar > label,
#softedgeframe > div.ui-frame.jsdialog.sidebar > label {
	color: var(--color-main-text);
	font-size: var(--header-font-size);
	line-height: var(--header-height);
	margin: 4px;
}

#accessibilityCheckBox .jsdialog.ui-text {
	margin: 0;
	padding-inline-end: 112px;
	color: var(--color-main-text);
	font-size: var(--default-font-size);
	text-transform: none;
}

*:not(.modalpopup) > .lokdialog_container.ui-dialog.ui-widget-content, .autofilter-container {
	border: 1px solid var(--color-border-darker);
	-webkit-box-shadow: 0 0 3px var(--color-border-darker);
	box-shadow: 0 0 3px var(--color-border-darker);
	border-radius: var(--border-radius);
	background: var(--color-background-darker);
}

.jsdialog.row {
	display: table-row;
}

.jsdialog.cell {
	display: table-cell;
	vertical-align: middle;
}

.jsdialog.vertical:not(.sidebar):not(.ui-separator) {
	width: 100%;
}

th.jsdialog:not(:first-child) {
	padding-inline-end: 24px;
}

th.jsdialog {
	text-align: start;
}

.jsdialog.vertical:not([id^='table-dialog-action_area']) > .jsdialog.row,
td.jsdialog > [id^='table-box']:not(.sidebar) {
	display: table;
	width: 100%;
}

.jsdialog.ui-alignment {
	margin: 0px;
	display: block;
}

.jsdialog.ui-grid {
	border-spacing: 0px;
	width: 100%;
	display: grid;
	grid-gap: 4px;
}

/* Find and replace dialog */
#search_grid, #replace_grid {
	grid-template-columns: minmax(100px, min-content) auto !important;
}
#searchframe input[type='checkbox'] {
	margin-inline-start: 0;
}

/* keep structure with hidden elements correct */

.ui-grid > .hidden {
	visibility: hidden;
	display: initial !important;
	/* don't occupy space showing empty area */
	width: 0px !important;
	height: 0px !important;
	margin: 0px !important;
	padding: 0px !important;
}

/* Page number dialog placed under Insert menu */
#PageNumberDialog #rightVBox,
#PageNumberDialog #leftVBox {
	display: flex;
	flex-direction: column;
	margin: 5px;
}

/* Scrollwindow - used eg. in accessibility check in writer */
.jsdialog.ui-scrollwindow:not(.formulabar) {
	overflow: auto;
	max-height: 500px;
	max-width: 700px;
}
/* - Also used in SpellingDialog where suggestion come in form
     of an image*/
.jsdialog.ui-scrollwindow.has-ui-drawing-area {
	width: max-content;
}

/* AccessibilityCheckDialog hack to prevent huge height in Firefox */
#AccessibilityCheckDialog .cell {
	vertical-align: unset !important;
}

/* Separator */

.jsdialog:focus-visible + .jsdialog.ui-separator.vertical {
	background-color: transparent;
}
.jsdialog.ui-separator.vertical {
	margin: 5px 0px;
	padding-right: 1px;
	background-color: var(--color-background-darker);
}

.jsdialog.ui-separator.horizontal {
	width: 100%;
	margin: 0px;
	background-color: var(--color-border-lighter);
	border: none;
	height: 1px;
}

/* Badge */
.ui-badge {
	padding: 5px !important;
	color: var(--color-main-text);
	background-color: var(--color-background-darker);
	border-width: 0px;
	border-radius: var(--border-radius);
	font-family: var(--cool-font);
	font-size: var(--default-font-size);
	font-weight: normal;
}

/* Tabs */

.ui-tabs-content.jsdialog {
	display: grid;
}

.ui-tabs-content.jsdialog > .ui-content {
	grid-row: 1;
	grid-column: 1;
	display: flex;
	justify-items: stretch;
	align-items: stretch;
}

.ui-tabs-content.jsdialog > .ui-content.hidden {
	display: inherit !important;
	visibility: hidden;
}

.ui-tabpage.jsdialog {
	width: 100%;
	height: 100%;
}
/* ... */

